wikiscan.css
/* ... */
.menu a{
    color:#000;
}
.menu a:visited{
    color:#000;
}
.menu a:hover{
    text-decoration:none;
}
.menu_item.sel, .menu_item:hover{
    border-bottom:#666 1px solid;
}

    /*border-bottom:#3c3c3ca6 1px solid;*/

.site_banner{
	background: #000;
	color: #fff;
	display: flex;
	flex-wrap: wrap;
	align-items: center;
}
.site_banner h1 {
	flex: 1;
	text-align: center;
	font-size: 140%;
	font-weight: bold;
}
.site_banner a{
	color: #fff;
}

/* ancien */
/*
.site_banner{
    position: absolute;
    top: 25px;
    left: 366px;
    font-family:serif;
    color:#ffffff;
    text-align:center;
    line-height: 1;
}
.banner_text{
    font-size:80%;
    line-height:12px;
}
.site_banner a{
    color:#ffffff;
    font-size:140%;
    font-weight:bold;
}
.banner_msg{
    position: absolute;
    top: 5px;
    left: 290px;
    color:#555;
    text-align:left;
    padding:.5em;
    background-color:#fffce7;
    border:#fff6b6 1px solid;
    border-radius:8px;
    z-index:100;
    font-size:90%;
}

.menu{
    font-size:110%;
    letter-spacing:0.04em;
    font-weight:bold;
    padding:0px 0px 0px 8px;
    background-color:#eee;
    height:38px;
    white-space:nowrap;
}
.menu_item,.menu_item_sel{
    display:inline-block;
    padding:2px 5px;
    margin:5px 10px;
    line-height:23px;
    font-weight:bold;
    background-color:#f7f7f7;
    border:#d5d5d5 1px solid;
}
.menu a{
    color:#000;
}
.menu a:visited{
    color:#000;
}
.menu_item_sel{
    background-color:#fff;
}
*/

/**/


.beta{
    display:inline;
    padding:2px 2px 2px 200px;
    margin:5px 10px;
    line-height:26px;
    color:#fff;
    font-size:90%;
}
.lag{
    margin:28px 10px 1px 2px;
    font-size:9px;
    font-weight:normal;
    float:right;
    color:#777;
}
.description{
    position:absolute;
    top:45px;
    left:400px;
    padding:2px 2px 2px 30px;
    color:#e0e0e0;
    font-size:105%;
}
.description a{
    color:#e0e0e0;
    text-decoration:none;
}
.contents{
    /*border:#d5d5d5 1px solid;*/
    padding:0px;
    min-height:75vh;
    /*text-align:center;*/
    margin: 0 auto;
    display: table;

}

.list_mep_live{
    margin:3px auto;
    padding:0px;
}
@media (min-width: 1024px) {
	.list_mep_live{
	    display:grid;
	    grid-template-columns: 1fr 510px;
	    align-items: start;
	}
    .list_mep_live .date_title {
        grid-column: 1;
        grid-row: 1;
    }
    .list_mep_live .live_menu {
        grid-column: 1;
        grid-row: 2;
    }
    .list_mep_live .list {
        grid-column: 1;
        grid-row: 3;
    }
    .list_mep_live .graphs_toplist {
        grid-column: 2;
        grid-row: 1/4;
    }

	.list_mep_dates{
	    display:grid;
	    grid-template-columns: 1fr 510px;
	    align-items: start;
	}
    .list_mep_dates .list_calendar {
        grid-column: 1;
        grid-row: 1;
    }
    .list_mep_dates .list {
        grid-column: 1;
        grid-row: 2;
    }
    .list_mep_dates .graphs_toplist {
        grid-column: 2;
        grid-row: 1/3;
    }
}
.list_mep td{
    vertical-align:top;
    padding:0px;
}


.main_title{
    margin:0.1em;
    padding:0.1em;
    background-color:#f7f7f7;
    border:#d5d5d5 1px solid;
}
.main_title h1{
    margin:0.3em;
    padding:0.2em;
}
.main_contents{
    margin:0.1em;
    padding-left:0.3em;
    border:#d5d5d5 1px solid;
}

.grid{
    margin:0;
    padding:3px;
    border:#d5d5d5 1px solid;
}
.grid_item{
    margin:3px;
    padding:3px;
    background-color:#fafdff;
    border:#d5d5d5 1px solid;
}
.grid_item h2{
    background-color:#e8e8e8;
    margin-bottom:3px;
}
.grid_item .sorts td{
    border-top:0px !important;
}

.grid .live_menu{
    margin:0.6em;
    margin-left:3em;
}
.date_title_grid .last_update{
    margin:0.7em 0.7em 0em 0.7em;
    float:right;
    font-size:90%;
}

@media (min-width: 721px) {
	.grid_cont {
		display:flex;
	}
	.grid_cont .mep {
		flex: 1;
	}
	.grid_cont .mep.mep_users {
		flex: 0 320px;
	}
}

.dates_menu{
    width:100%;
    background-color:#f7f7f7;
    border-collapse:collapse;
    margin:1px 0px;
    color:#aaa;
    display:flex;
    max-width: 100vw;
    overflow:auto;
}
.dates_menu >div{
    border:#d5d5d5 1px solid;
    padding:2px;
    text-align:center;
    flex:1;
}
.dates_menu >.sel{
    font-weight:bold;
    background-color:#fff;
}
.dates_menu a,.dates_menu a:visited{
    color:#337;
}
.date_title{
    text-align:center;
    background-color:#f7f7f7;
    border:#d5d5d5 1px solid;
    margin:1px 0px;
}

.date_title h1{
    text-align:center;
    margin:0px;
    padding:2px 10px;
    *display: inline; /*IE<8*/
    *zoom : 1; /*IE<8*/
}
.date_prev{
    margin-right:0.3em;
}
.date_next{
    margin-left:0.3em;
}
.date_block{
    display:inline-block;
    width:15em;
}

.alldates{
    font-size:110%;
    background-color:#d5d5d5;
    border-collapse:collapse;
    margin:0.2em;
}

.alldates td{
    text-align:center;
    padding:0.1em 0.2em;
    border:#f0f0f0 1px solid;
    vertical-align:bottom;
    font-size:90%;
}
.alldates_year td{
    font-size:70%;
}
.alldates .refresh a{
    color:#808;
}

.all_dates_contents{
    padding:0.3em;
}
.all_dates_contents .list{
    margin:0 1em;
    display:table;
    width:auto;
}
.gbox{
    background-color:#ed6d05;
    padding:0px;
}


.live_menu{
    background-color:#f7f7f7;
    color:#aaa;
    text-align:center;
    border:#d5d5d5 1px solid;
    margin:1px 0px;
}
.live_menu a{
    color:#006;
}
.live_menu_item,.live_menu_item_sel{
    padding:1px 5px;
    margin:1px 1px;
    display:inline-block;
    *display: inline; /*IE<8*/
    *zoom : 1; /*IE<8*/
}
.live_menu_item_sel{
    font-weight:bold;
    background-color:#fff;
}




.graphs_toplist{
	display:flex;
	flex-wrap:wrap;
}
.graphs_toplist a{
    margin:5px;
	flex: 1 1 auto;
}
.graphs_toplist img{
    max-width: 100%;
}

.ns_charts{
    text-align:center;
    background-color:#f8f8f8;
    margin:5px;
    border:#aaa 1px solid;
    font-size:70%;
    display:inline-block;
}
.ns_chart{
    display:inline-block;
    margin:5px 6px;
}
/* ... */

